[gd_scene load_steps=4 format=2]

[ext_resource path="res://Actors/Player/Attacks/Buckshot.gd" type="Script" id=1]
[ext_resource path="res://Resources/SFX/explosion-01.wav" type="AudioStream" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 160.0

[node name="Buckshot" type="Area2D"]
collision_layer = 0
collision_mask = 8
monitorable = false
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_Buckshot_area_entered"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
